--- a/src/app/admin/features/operator/operator-details/operator-details.component.html
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.html
@@ -57,9 +57,9 @@
                             <!-- <p style="text-align: left;" class="sub-tittle">
                                 {{operator?.operatorname || 'empty'}}
                             </p> -->
-                            <div style="display: flex; justify-content: center;">
+                            <!-- <div style="display: flex; justify-content: center;">
                                 <img class="toggle1" src="/assets/images/login/contact1.png" alt="Toggle">
-                            </div>
+                            </div> -->
                             <p class="text" [ngClass]="operator?.isactive ? 'active-text' : 'deactive-text'">
                                 <span class="label">Status</span>
                                 <span class="separator1">:</span>
