--- a/src/app/admin/features/Bulk_operation/subscriber-import/subscriber-import.component.html
+++ b/src/app/admin/features/Bulk_operation/subscriber-import/subscriber-import.component.html
@@ -106,7 +106,7 @@
                 <div class="d-flex justify-content-end align-items-center mt-3 ">
                     <button type="button" class="btn btn-success mx-2" (click)="goBack()">Back &nbsp;<i
                             class="fa fa-arrow-left" aria-hidden="true"></i></button>
-                    <button type="submit" class="btn btn-success" (click)="bulkSubscriberImport()">Submit</button>
+                    <button type="submit" class="btn btn-success"  [disabled]="!operatorid"  (click)="bulkSubscriberImport()">Submit</button>
                 </div>
             </div>
         </div>
