--- a/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
@@ -15,10 +15,10 @@
                         </div>
                         <div class="card align-item-strech">
                             <div class="d-flex">
-                                <!-- <div class="col-2 col-md-2 " style="padding: 3rem 2rem;">
-                                    <img [src]="'/assets/images/icons/user.jpg'" alt="Customer Photo"
+                                <div class="col-2 col-md-2 " style="padding: 3rem 2rem;">
+                                    <img [src]="'/assets/images/login/contact1.png'" alt="Customer Photo"
                                         style="width: 50px;">
-                                </div> -->
+                                </div>
                                 <div class=" col-10  " style="padding: 0.5rem;">
                                     <div class="d-flex">
                                         <div class="col-5 text2 ">
@@ -131,21 +131,23 @@
                                     </select> -->
 
                                     <select name="packages" id="packages" (ngModelChange)="onPackageSelect($event)"
-                                        [(ngModel)]="package">
+                                    [(ngModel)]="selectedPackage">
                                         <option value="">Selected Package</option>
-                                        <option *ngFor="let pack of packageid"  [value]="pack.value">
-                                            <!-- {{ getPackageName(pack) }} -->
-                                              {{pack.label}}
+                                        <option *ngFor="let pack of packageid"
+                                        [value]="getPackageValue(pack)">
+                                            {{ getPackageName(pack) }}
                                         </option>
                                     </select>
 
                                 </div>
                             </div>
-                            <div class="">
-                                <!-- <app-lcopiechart></app-lcopiechart> -->
+                            <!-- <div class="">
+                                <app-lcopiechart></app-lcopiechart>
                                 <canvasjs-chart [options]="chartOptions"
                                     [styles]="{width: '100%', height:'300px'}"></canvasjs-chart>
-                            </div>
+                            </div> -->
+                            <div id="chartContainer" style="width: 100%; height: 300px;"></div>
+
                             <h4 style="text-align: center;color: rgb(243, 12, 12);">Total Amount: <span
                                     style="color: green;font-size: 20px;font-weight: 600;"><i class="fa fa-inr"
                                         aria-hidden="true"></i>{{Totalamount}}</span> </h4>
