--- a/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.html
+++ b/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.html
@@ -14,7 +14,7 @@
                     <div class="input_box">
                         <label>LCO Name</label>
                         <input type="text" matInput [matAutocomplete]="auto" formControlName="operatorid"
-                            (input)="filterOperators($event)" placeholder="Select a Operator"
+                            (input)="filterOperators($event)" placeholder="Select Operator"
                             [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
                         <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
@@ -32,7 +32,7 @@
                     <div class="input_box">
                         <label>Area Name</label>
                         <input type="text" matInput [matAutocomplete]="autoArea" formControlName="areaid"
-                            (input)="filterAreas($event)" placeholder="Select a areaid"
+                            (input)="filterAreas($event)" placeholder="Select Area"
                             [matAutocompleteDisabled]="false" [value]="selectedArea?.name">
 
                         <mat-autocomplete #autoArea="matAutocomplete" [displayWith]="displayArea">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="input_box">
                         <label>Street Name</label>
-                        <input type="text" placeholder="Search a Street" formControlName="streetid"
+                        <input type="text" placeholder="Select Street" formControlName="streetid"
                             [(ngModel)]="streetid" [matAutocomplete]="autoStreet" class="example-input"
                             [value]="selectedStreet?.name" (input)="filterStreet($event)">
                         <mat-autocomplete #autoStreet="matAutocomplete" [displayWith]="displayStreet">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="input_box">
                         <label for="phone">Subscriber Name Last</label>
-                        <input type="text" formControlName="customernamelast" placeholder="Enter Subscriber Name Last"
+                        <input type="text" formControlName="customernamelast" placeholder="Enter Subscriber Last Name"
                             required [ngClass]="{ 'is-invalid': submitted && f['customernamelast'].errors }" />
 
                         <div style="position: relative; font-size: small;"
@@ -108,7 +108,7 @@
                         <div class="">
                             <label>Date of Birth</label>
                         </div>
-                        <input type="date" formControlName="dateofbirth" placeholder="Date of Birth" required
+                        <input type="date" formControlName="dateofbirth" placeholder="Select Date Of Birth" required
                             [ngClass]="{ 'is-invalid': submitted && f['dateofbirth'].errors }" />
                         <div style="position: relative; font-size: small;" *ngIf="submitted && f['dateofbirth'].errors"
                             class="invalid-feedback">
@@ -120,7 +120,7 @@
                     <div class="input_box">
                         <label for="phone">Mobile Number</label>
                         <input pattern="[0-9]*" maxlength="10" required type="text" (keypress)="onKeydown($event)"
-                            formControlName="mobileno" placeholder="Phone Number" required
+                            formControlName="mobileno" placeholder="Enter Mobile No" required
                             [ngClass]="{ 'is-invalid': submitted && f['mobileno'].errors }" />
 
                         <div style="position: relative; font-size: small;" *ngIf="submitted && f['mobileno'].errors"
@@ -137,7 +137,7 @@
                     <div class="input_box">
                         <label for="pass">Landline No</label>
                         <input pattern="^0\d{2,4}\d{6,8}$" maxlength="10" type="text" formControlName="landlineno"
-                            (keypress)="onKeydown($event)" placeholder="Enter Landline Number"
+                            (keypress)="onKeydown($event)" placeholder="Enter Landline No"
                             [ngClass]="{'is-invalid': submitted && f['landlineno'].errors }" required />
 
                         <div style="position: relative; font-size: small;" *ngIf="submitted && f['landlineno'].errors"
@@ -232,7 +232,7 @@
                     </div>
                     <div class="input_box">
                         <label for="username">Billing Address</label>
-                        <input type="text" formControlName="address" placeholder="Enter Billing Address" required
+                        <input type="text" formControlName="address" placeholder="Enter the Billing Address" required
                             [(ngModel)]="billingaddress"
                             [ngClass]="{ 'is-invalid': submitted && f['address'].errors }" />
 
@@ -248,7 +248,7 @@
                     </div>
                     <div class="input_box">
                         <label for="email">Install Address</label>
-                        <input type="text" formControlName="installaddress" placeholder="Enter Install Address" required
+                        <input type="text" formControlName="installaddress" placeholder="Enter the Install address" required
                             [(ngModel)]="installaddress"
                             [ngClass]="{ 'is-invalid': submitted && f['installaddress'].errors }" />
 
