--- a/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.scss
+++ b/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 950px;
+    // max-width: 950px;
     width: 100%;
     background: #ffffff;
     border-radius: 0.5rem;
@@ -18,18 +18,18 @@
 .container .title p {
     font-size: 25px;
     font-weight: 500;
-    position: relative;
+    // position: relative;
 }
 
-.container .title p::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 30px;
-    height: 3px;
-    background: linear-gradient(to right, #058372, #acf3cc);
-}
+// .container .title p::before {
+//     content: "";
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 30px;
+//     height: 3px;
+//     background: linear-gradient(to right, #058372, #acf3cc);
+// }
 
 .user_details {
     display: flex;
@@ -37,8 +37,8 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 25px;
-    max-height: 550px;
-    overflow: scroll;
+    // max-height: 550px;
+    // overflow: scroll;
 }
 
 .user_details .input_box {
